[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://nodes/barricade/Barricade.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.8632, 12.1715 )

[node name="Barricade" type="Area2D" groups=[
"interactable",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.54351, 0.40708 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -12.0
margin_right = 20.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="BreakCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RepairCooldown" type="Timer" parent="."]
one_shot = true

[node name="Hint" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -26.8791 )

[node name="Label" type="Label" parent="Hint"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -12.0
margin_right = 52.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "A  - RÃ©parer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Static" type="StaticBody2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Static"]
shape = SubResource( 3 )
[connection signal="timeout" from="BreakCooldown" to="." method="_on_BreakCooldown_timeout"]
[connection signal="timeout" from="RepairCooldown" to="." method="_on_RepairCooldown_timeout"]
